# music-player

./: .bazelrc  .env  .gitignore  .taurignore  BUILD  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WORKSPACE  cargo-bazel-lock.json  flake.nix  playlists.pls  tea.yaml  workspace_status.sh
addons/: BUILD  Cargo.toml
addons/airplay/: Cargo.toml
addons/chromecast/: Cargo.toml
addons/datpiff/: Cargo.toml
addons/deezer/: Cargo.toml
addons/genius/: Cargo.toml
addons/lastfm/: Cargo.toml
addons/local/: Cargo.toml
addons/musicbrainz/: Cargo.toml
addons/myvazo/: Cargo.toml
addons/soundcloud/: Cargo.toml
addons/spotify/: Cargo.toml
addons/src/: airplay.rs  chromecast.rs  datpiff.rs  deezer.rs  dlna.rs  genius.rs  kodi.rs  lastfm.rs  lib.rs  local.rs  musicbrainz.rs  myvazo.rs  tononkira.rs
addons/tidal/: Cargo.toml
addons/tononkira/: Cargo.toml
addons/youtube/: Cargo.toml
audio/: BUILD  Cargo.toml
audio/src/: main.rs
audio/src/fetch/: cache.rs  client.rs  mod.rs  receive.rs
client/: BUILD  Cargo.toml
client/src/: lib.rs  library.rs  playback.rs  playlist.rs  tracklist.rs  ws_client.rs
client/src/tests/: library.rs  mod.rs  playback.rs  tracklist.rs
discovery/: BUILD  Cargo.toml
discovery/src/: lib.rs  main.rs  tests.rs
entity/: BUILD  Cargo.toml
entity/src/: addon.rs  album.rs  artist.rs  artist_tracks.rs  folder.rs  lib.rs  playlist.rs  playlist_tracks.rs  tests.rs  track.rs  tracklist.rs
graphql/: BUILD  Cargo.toml
graphql/src/: lib.rs  main.rs  simple_broker.rs
graphql/src/schema/: addons.rs  core.rs  devices.rs  history.rs  library.rs  mixer.rs  mod.rs  playback.rs  playlist.rs  tracklist.rs
graphql/src/schema/objects/: album.rs  artist.rs  current_track.rs  device.rs  folder.rs  lyrics.rs  mod.rs  player_state.rs  playlist.rs  search_result.rs  track.rs  tracklist.rs
graphql/src/tests/: library.rs  mod.rs  playback.rs  playlist.rs  tracklist.rs
graphql/src/tests/objects/: album.rs  artist.rs  folder.rs  playlist.rs  track.rs
migration/: BUILD  Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20221115_220318_add_folder_table.rs  m20221117_211308_add_created_at_column.rs  main.rs  tests.rs
playback/: BUILD  Cargo.toml
playback/src/: formatter.rs  lib.rs  player.rs  tests.rs
playback/src/addon/: datpiff.rs  lastfm.rs  musicbrainz.rs
playback/src/audio_backend/: mod.rs  rodio.rs
playback/src/decoder/: symphonia_decoder.rs
playback/src/metadata/audio/: file.rs  mod.rs
scanner/: BUILD  Cargo.toml
scanner/src/: lib.rs  main.rs  tests.rs  types.rs
server/: BUILD  Cargo.toml  build.rs
server/proto/: .gitignore  buf.gen.yaml  buf.md  buf.yaml
server/proto/metadata/v1alpha1/: album.proto  artist.proto  lyrics.proto  track.proto
server/proto/music/v1alpha1/: addons.proto  core.proto  history.proto  library.proto  mixer.proto  playback.proto  playlist.proto  tracklist.proto
server/proto/objects/v1alpha1/: addon.proto  folder.proto  playlist.proto  tracklist.proto
server/src/: addons.rs  core.rs  event.rs  history.rs  lib.rs  library.rs  main.rs  mixer.rs  playback.rs  playlist.rs  server.rs  tracklist.rs
server/src/api/: metadata.v1alpha1.rs  music.v1alpha1.rs  objects.v1alpha1.rs
server/src/tests/: library.rs  mod.rs  playback.rs  server.rs  tracklist.rs
settings/: BUILD  Cargo.toml
settings/src/: lib.rs  tests.rs
storage/: BUILD  Cargo.toml
storage/src/: lib.rs  tests.rs
storage/src/repo/: album.rs  artist.rs  folder.rs  mod.rs  playlist.rs  track.rs
storage/src/searcher/: album.rs  artist.rs  mod.rs  track.rs
tracklist/: BUILD  Cargo.toml
tracklist/src/: lib.rs  tests.rs
types/: BUILD  Cargo.toml
types/src/: lib.rs  tests.rs  types.rs
webui/: BUILD  Cargo.toml
webui/chromecast/: README.md  bun.lockb  package.json
webui/chromecast/public/: index.html
webui/chromecast/src/: CastProvider.js  CustomReceiver.js  index.css  index.js
webui/chromecast/src/Components/Header/: Header.jsx
webui/chromecast/src/Components/MediaInfo/: MediaInfo.jsx  index.jsx
webui/chromecast/src/Components/Progress/: Progress.jsx
webui/chromecast/src/Components/Splash/: Splash.jsx  index.jsx
webui/chromecast/src/Hooks/: useFormat.js
webui/musicplayer/: .gitignore  README.md  bsconfig.json  bun.lockb  codegen.yml  graphql.schema.json  package.json
webui/musicplayer/.storybook/: main.js  preview.js
webui/musicplayer/public/: index.html
webui/musicplayer/src/: App.tsx  ResourceUriResolver.ts  TauriLink.ts  Theme.tsx  emotion.d.ts  global.d.ts  index.css  index.tsx
webui/musicplayer/src-tauri/: BUILD  BUILD.bazel  Cargo.toml  tauri.conf.json
webui/musicplayer/src-tauri/src/: graphql_server.rs  main.rs
webui/musicplayer/src/Components/AlbumDetails/: AlbumDetails.stories.tsx  AlbumDetails.tsx  AlbumDetailsWithData.tsx  index.tsx
webui/musicplayer/src/Components/Albums/: Albums.stories.tsx  Albums.tsx  AlbumsWithData.tsx  index.tsx
webui/musicplayer/src/Components/ArtistDetails/: ArtistDetails.stories.tsx  ArtistDetails.tsx  ArtistDetailsWithData.tsx  index.tsx
webui/musicplayer/src/Components/Artists/: Artists.stories.tsx  Artists.tsx  ArtistsWithData.tsx  index.tsx
webui/musicplayer/src/Components/Button/: Button.stories.tsx  (+1 more)
webui/musicplayer/src/GraphQL/: Fragments.tsx
webui/musicplayer/src/Hooks/: GraphQL.tsx  useCover.tsx  useDevices.tsx  useFormat.tsx  useHover.tsx  usePlayback.tsx  usePlaybackProgress.tsx  usePlayerState.tsx  usePlaylist.tsx  useSearch.tsx
webui/musicplayer/src/Providers/: ThemeProvider.tsx  index.tsx
webui/musicplayer/src/Types/: Artist.ts  Device.ts  Folder.ts  Playlist.ts  Track.ts  index.ts
webui/musicplayer/src/stories/: AlbumDetails.stories.tsx  Albums.stories.tsx  ArtistDetails.stories.tsx  Artists.stories.tsx  Button.stories.tsx  ContextMenu.stories.tsx  ControlBar.stories.tsx  Filter.stories.tsx  Library.stories.tsx  Like.stories.tsx  PlayQueue.stories.tsx  Playlists.stories.tsx  Search.stories.tsx  Sidebar.stories.tsx  Tracks.stories.tsx
webui/src/: lib.rs  main.rs  tests.rs
(+416 files in other folders)
