[package]
name = "music-player"
version = "0.2.0-alpha.3"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
readme = "README.md"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
keywords = ["tokio", "music", "daemon", "streaming", "player"]
description = "An extensible music player daemon written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "addons",
    "client",
    "discovery",
    "entity",
    "graphql",
    "migration",
    "playback",
    "scanner",
    "server",
    "settings",
    "storage",
    "tracklist",
    "webui"
]

[[bin]]
name = "music-player"
path = "src/main.rs"

[dependencies.music-player-server]
path = "server"
version = "0.1.9"

[dependencies.music-player-playback]
path = "playback"
version = "0.1.5"

[dependencies.music-player-scanner]
path = "scanner"
version = "0.1.5"

[dependencies.music-player-entity]
path = "entity"
version = "0.1.5"

[dependencies.music-player-migration]
path = "migration"
version = "0.1.4"

[dependencies.music-player-settings]
path = "settings"
version = "0.1.1"

[dependencies.music-player-storage]
path = "storage"
version = "0.1.2"

[dependencies.music-player-addons]
path = "addons"
version = "0.1.0"

[dependencies.music-player-tracklist]
path = "tracklist"
version = "0.1.5"

[dependencies.music-player-client]
path = "client"
version = "0.1.1"

[dependencies.music-player-webui]
path = "webui"
version = "0.1.4"

[dependencies.music-player-discovery]
path = "discovery"
version = "0.1.0"

[dependencies.music-player-graphql]
path = "graphql"
version = "0.1.2"

[dependencies.music-player-types]
path = "types"
version = "0.1.1"

[dependencies.sea-orm-migration]
version = "^0.9.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "runtime-tokio-rustls",
  "sqlx-sqlite",
]

[dependencies]
clap = "3.2.20"
tokio = { version = "1.21.0", features = ["full"] }
md5 = "0.7.0"
sea-orm = { version = "0.9.2", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
futures = "0.3.24"
lofty = "0.9.0"
owo-colors = "3.5.0"
tabled = "0.8.0"
crossterm = { version = "0.25.0", features = ["serde"] }
tui = { version = "0.19.0", features = ["crossterm", "serde"] }
tungstenite = "0.17.3"
futures-channel = "0.3.24"
serde_json = "1.0.85"
parking_lot = "0.12.1"
dirs = "4.0.0"
spinners = "4.1.0"
