[package]
name = "music-player-addons"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
description = "The addons for the music player"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-types]
path = "../types"
version = "0.1.1"

[dependencies.music-player-client]
path = "../client"
version = "0.1.1"

[dependencies]
surf = "2.3.2"
async-trait = "0.1.59"
anyhow = "1.0.67"
