[package]
name = "music-player-addons"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
description = "The addons for the music player"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-types]
path = "../types"
version = "0.1.2"

[dependencies.music-player-client]
path = "../client"
version = "0.1.2"

[dependencies]
surf = { version = "2.3.2", features = ["h1-client-rustls"], default-features = false}
async-trait = "0.1.59"
anyhow = "1.0.67"
rust_cast = { git = "https://github.com/tsirysndr/rust-cast.git", rev = "c2220d2" }
jsonrpsee = { version = "0.16.2", features = ["jsonrpsee-ws-client", "jsonrpsee-http-client", "jsonrpsee-client-transport", "async-client", "client"] }
url = "2.3.1"
