[package]
name = "music-player-addons"
version = "0.1.6"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
description = "The addons for the music player"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-types]
path = "../types"
version = "0.1.5"

[dependencies.music-player-client]
path = "../client"
version = "0.1.6"

[dependencies.music-player-tracklist]
path = "../tracklist"
version = "0.1.8"

[dependencies]
surf = { version = "2.3.2", features = ["h1-client-rustls"], default-features = false}
async-trait = "0.1.59"
anyhow = "1.0.67"
# rust_cast = { package = "chromecast", version = "0.18.1", git = "https://github.com/tsirysndr/rust-cast.git", rev = "d63aa7f", features = ["thread_safe"] }
jsonrpsee = { version = "0.16.2", features = ["jsonrpsee-ws-client", "jsonrpsee-http-client", "jsonrpsee-client-transport", "async-client", "client"] }
url = "2.3.1"
md5 = "0.7.0"
local-ip-addr = "0.1.1"
upnp-client = "0.1.9"
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["time"] }
hyper = { version = "0.14.23", features = ["runtime", "client", "stream", "tcp", "http1", "http2"] }
chromecast = { version = "0.18.2", features = ["thread_safe"] }
futures-util = "0.3.26"
