[package]
name = "music-player-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
futures-util = "0.3.25"
hyper = { version = "0.14.23", features = ["client", "stream", "tcp", "http1", "http2"] }
parking_lot = "0.12.1"
tempfile = "3.3.0"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
symphonia = { version = "0.5.1", features = ["aac", "alac", "mp3", "isomp4", "flac"] }
hyper-rustls = "0.23.2"
rustls = "0.20.7"
