[package]
name = "music-player-audio"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
description = "The audio fetching logic for music player"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.1"

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
futures-util = "0.3.25"
hyper = { version = "0.14.23", features = ["client", "stream", "tcp", "http1", "http2"] }
parking_lot = "0.12.1"
tempfile = "3.3.0"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
symphonia = { version = "0.5.1", features = ["aac", "alac", "mp3", "isomp4", "flac"] }
hyper-rustls = "0.23.2"
rustls = "0.20.7"
mime_guess = "2.0.4"
url = "2.3.1"
md5 = "0.7.0"
