[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
description = "The audio fetching logic for music player"
edition = "2021"
license = "MIT"
name = "music-player-audio"
repository = "https://github.com/tsirysndr/music-player"
version = "0.1.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.3"

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
futures-util = "0.3.25"
hyper = {version = "0.14.23", features = ["client", "stream", "tcp", "http1", "http2"]}
hyper-rustls = "0.24.0"
log = "0.4.20"
md5 = "0.7.0"
mime_guess = "2.0.4"
parking_lot = "0.12.1"
rustls = {version = "0.21.0", features = ["dangerous_configuration"]}
symphonia = {version = "0.5.1", features = ["aac", "alac", "mp3", "isomp4", "flac"]}
tempfile = "3.3.0"
thiserror = "1.0.38"
tokio = {version = "1.23.0", features = ["full"]}
url = "2.3.1"
webpki-roots = "0.23.0"
