[package]
name = "music-player-client"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
keywords = ["tokio", "music", "cli", "daemon", "streaming"]
description = "The client library for the music player"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-server]
path = "../server"
version = "0.1.6"

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.0"

[dependencies]
tonic = "0.8.1"
