[package]
name = "music-player-client"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
keywords = ["tokio", "music", "cli", "daemon", "streaming"]
description = "The client library for the music player"

[dev-dependencies]
tonic-web = "0.4.0"
envtestkit = "1.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-server]
path = "../server"
version = "0.1.11"

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.2"

[dependencies.music-player-types]
path = "../types"
version = "0.1.2"

[dev-dependencies.music-player-playback]
path = "../playback"
version = "0.1.8"

[dev-dependencies.music-player-storage]
path = "../storage"
version = "0.1.3"

[dev-dependencies.music-player-tracklist]
path = "../tracklist"
version = "0.1.6"

[dependencies]
futures-util = "0.3.24"
tokio-tungstenite = "0.17.2"
tonic = "0.8.1"
url = "2.3.1"
tokio = { version = "1.21.2", features = ["full"] }
anyhow = "1.0.67"

