[package]
name = "music-player-entity"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
description = "Entities for the music player"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-types]
path = "../types"
version = "0.1.0"

[dependencies]
md5 = "0.7.0"
sea-orm = { version = "0.9.2", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
serde = "1.0.145"
