[package]
name = "music-player-graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.music-player-playback]
path = "../playback"
version = "0.1.4"

[dependencies.music-player-scanner]
path = "../scanner"
version = "0.1.4"

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.0"

[dependencies.music-player-storage]
path = "../storage"
version = "0.1.0"

[dependencies.music-player-entity]
path = "../entity"
version = "0.1.3"

[dependencies.music-player-tracklist]
path = "../tracklist"
version = "0.1.3"

[dependencies]
async-graphql = "4.0.15"
tide = "0.16.0"
async-graphql-tide = "4.0.15"
tokio = { version = "1.21.0", features = ["full"] }
md5 = "0.7.0"
sea-orm = { version = "0.9.3", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
