[package]
name = "music-player-graphql"
version = "0.1.10"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
keywords = ["tokio", "music", "cli", "daemon", "streaming"]
description = "The GraphQL server API for the music player"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.music-player-playback]
path = "../playback"
version = "0.1.10"

[dependencies.music-player-scanner]
path = "../scanner"
version = "0.1.8"

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.4"

[dependencies.music-player-storage]
path = "../storage"
version = "0.1.6"

[dependencies.music-player-entity]
path = "../entity"
version = "0.1.7"

[dependencies.music-player-tracklist]
path = "../tracklist"
version = "0.1.7"

[dependencies.music-player-types]
path = "../types"
version = "0.1.3"

[dependencies.music-player-discovery]
path = "../discovery"
version = "0.1.2"

[dependencies.music-player-addons]
path = "../addons"
version = "0.1.5"

[dev-dependencies.music-player-migration]
path = "../migration"
version = "0.1.6"

[dev-dependencies]
ctor = "0.1.26"

[dependencies]
async-graphql = "4.0.15"
tide = "0.16.0"
async-graphql-tide = "4.0.15"
tokio = { version = "1.21.0", features = ["full"] }
md5 = "0.7.0"
sea-orm = { version = "0.9.3", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
rand = "0.8.5"
cuid = "1.2.0"
chrono = "0.4.23"
futures-util = "0.3.25"
futures-channel = "0.3.25"
once_cell = "1.16.0"
slab = "0.4.7"
serde = { version = "1.0.148", features = ["serde_derive"] }
mdns-sd = "0.5.9"
anyhow = "1.0.67"
url = "2.3.1"
upnp-client = "0.1.9"
