[package]
name = "music-player-migration"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
description = "The migrations for the music player"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.0"

[dependencies.sea-orm-migration]
version = "^0.9.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "runtime-tokio-rustls",
  "sqlx-sqlite",
]
