[package]
name = "music-player-playback"
version = "0.1.8"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
description = "The playback logic for music player"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-tracklist]
path = "../tracklist"
version = "0.1.6"

[dependencies.music-player-entity]
path = "../entity"
version = "0.1.6"

[dependencies.music-player-audio]
path = "../audio"
version = "0.1.0"

[dependencies]
cpal = "0.14.0"
futures-util = "0.3.24"
lazy_static = "1.4.0"
librespot-protocol = "0.4.2"
log = "0.4.17"
parking_lot = "0.12.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
rb = "0.4.1"
rodio  = { version = "0.16" }
symphonia = { version = "0.5.1", features = ["aac", "alac", "mp3", "isomp4", "flac"] }
thiserror = "1.0.34"
tokio = { version = "1.21.0", features = ["full"] }
zerocopy = "0.6.1"
owo-colors = "3.5.0"
async-trait = "0.1.57"
url = "2.3.1"
