[package]
name = "music-player-scanner"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-settings]
path = "../settings"

[dependencies]
dirs = "4.0.0"
lofty = "0.8.1"
mime_guess = "2.0.4"
walkdir = "2.3.2"

