[package]
name = "music-player-scanner"
version = "0.1.5"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
description = "The music library scanner for the music player"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.1"

[dependencies.music-player-entity]
path = "../entity"
version = "0.1.5"

[dependencies.music-player-storage]
path = "../storage"
version = "0.1.1"

[dependencies.music-player-types]
path = "../types"
version = "0.1.1"

[dependencies]
dirs = "4.0.0"
lofty = "0.9.0"
mime_guess = "2.0.4"
walkdir = "2.3.2"
sea-orm = { version = "0.9.2", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
futures = "0.3.24"
md5 = "0.7.0"
tokio = { version = "1.21.2", features = ["full"] }
