[package]
name = "music-player-server"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
keywords = ["tokio", "music", "cli", "daemon", "streaming", "player"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-playback]
path = "../playback"
version = "0.1.0"

[dependencies.music-player-scanner]
path = "../scanner"
version = "0.1.0"

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.0"

[dependencies.music-player-storage]
path = "../storage"
version = "0.1.0"

[dependencies.music-player-entity]
path = "../entity"
version = "0.1.0"

[dependencies]
owo-colors = "3.5.0"
prost = "0.11.0"
sea-orm = { version = "0.9.2", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
tokio = { version = "1.21.0", features = ["full"] }
tonic = "0.8.1"
tonic-web = "0.4.0"
futures = "0.3.24"
cuid = "1.2.0"
md5 = "0.7.0"

[build-dependencies]
tonic-build = "0.8"
