[package]
name = "music-player-server"
version = "0.1.11"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
keywords = ["tokio", "music", "cli", "daemon", "streaming"]
description = "The server API for the music player"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-playback]
path = "../playback"
version = "0.1.9"

[dependencies.music-player-scanner]
path = "../scanner"
version = "0.1.6"

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.2"

[dependencies.music-player-storage]
path = "../storage"
version = "0.1.3"

[dependencies.music-player-entity]
path = "../entity"
version = "0.1.6"

[dependencies.music-player-tracklist]
path = "../tracklist"
version = "0.1.6"

[dependencies.music-player-types]
path = "../types"
version = "0.1.2"

[dependencies]
owo-colors = "3.5.0"
prost = "0.11.0"
sea-orm = { version = "0.9.2", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
tokio = { version = "1.21.0", features = ["full"] }
tonic = "0.8.1"
tonic-web = "0.4.0"
futures = "0.3.24"
cuid = "1.2.0"
md5 = "0.7.0"
uuid = "1.1.2"
tungstenite = "0.17.3"
tokio-tungstenite = "0.17.2"
futures-channel = "0.3.24"
futures-util = "0.3.24"
serde = "1.0.145"
chrono = "0.4.23"

[build-dependencies]
tonic-build = "0.8"
