[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
categories = ["command-line-utilities"]
description = "The server API for the music player"
edition = "2021"
keywords = ["tokio", "music", "cli", "daemon", "streaming"]
license = "MIT"
name = "music-player-server"
repository = "https://github.com/tsirysndr/music-player"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-playback]
path = "../playback"
version = "0.1.10"

[dependencies.music-player-scanner]
path = "../scanner"
version = "0.1.8"

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.4"

[dependencies.music-player-storage]
path = "../storage"
version = "0.1.6"

[dependencies.music-player-entity]
path = "../entity"
version = "0.1.7"

[dependencies.music-player-tracklist]
path = "../tracklist"
version = "0.1.7"

[dependencies.music-player-types]
path = "../types"
version = "0.1.3"

[dependencies]
chrono = "0.4.23"
cuid = "1.2.0"
futures = "0.3.24"
futures-channel = "0.3.24"
futures-util = "0.3.24"
log = "0.4.20"
md5 = "0.7.0"
owo-colors = "3.5.0"
prost = "0.11.0"
sea-orm = {version = "0.9.2", features = ["runtime-tokio-rustls", "sqlx-sqlite"]}
serde = "1.0.145"
tokio = {version = "1.21.0", features = ["full"]}
tokio-stream = {version = "0.1.12", features = ["net"]}
tokio-tungstenite = "0.17.2"
tonic = "0.8.1"
tonic-web = "0.4.0"
tungstenite = "0.17.3"
uuid = "1.1.2"

[build-dependencies]
tonic-build = "0.8"
