[package]
name = "music-player-settings"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
description = "The settings module for the music player"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.2"
dirs = "4.0.0"
md5 = "0.7.0"
serde = "1.0.144"
toml = "0.5.9"
uuid = { version = "1.2.1", features = ["v4"] }
