[package]
name = "music-player-storage"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
description = " The storage module of music player"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.1"

[dependencies.music-player-types]
path = "../types"
version = "0.1.0"

[dependencies]
itertools = "0.10.5"
sea-orm = { version = "0.9.2", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
tantivy = "0.18.0"
tempfile = "3.3.0"
