[package]
name = "music-player-storage"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
description = " The storage module of music player"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.1"

[dependencies.music-player-types]
path = "../types"
version = "0.1.1"

[dependencies]
itertools = "0.10.5"
sea-orm = { version = "0.9.2", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
tantivy = "0.18.0"
tempfile = "3.3.0"
md5 = "0.7.0"
tokio = { version = "1.22.0", features = ["test-util", "macros"] }
