[package]
name = "music-player-tracklist"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
readme = "README.md"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-entity]
path = "../entity"
version = "0.1.1"

[dependencies]
atlist-rs = "0.2.1"
rand = "0.8.5"
