[package]
name = "music-player-tracklist"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
keywords = ["tokio", "music", "cli", "daemon", "streaming"]
description = "The tracklist manager for the music player"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.music-player-entity]
path = "../entity"
version = "0.1.3"

[dependencies]
atlist-rs = "0.2.1"
rand = "0.8.5"
