[package]
name = "music-player-types"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
description = "The types module of music player"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lofty = "0.9.0"
md5 = "0.7.0"
tantivy = "0.18.1"
