[package]
name = "music-player-types"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
description = "The types module of music player"

[dependencies.music-player-discovery]
path = "../discovery"
version = "0.1.2"

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lofty = "0.9.0"
md5 = "0.7.0"
tantivy = "0.18.1"
mdns-sd = "0.5.9"
minreq = { version = "2.6.0" }
local-ip-addr = "0.1.1"
upnp-client = "0.1.6"
url = "2.3.1"
