[package]
name = "music-player-webui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.music-player-graphql]
path = "../graphql"
version = "0.1.0"

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.0"

[dependencies]
actix-web = "4.2.1"
async-graphql = "4.0.15"
async-graphql-actix-web = "4.0.15"
mime_guess = "2.0.4"
owo-colors = "3.5.0"
rust-embed = { version = "6.4.1", features = ["actix"] }
actix-files = "0.6.2"
dirs = "4.0.0"
serde_derive = "1.0.145"
serde = { version = "1.0.145", features = ["serde_derive"] }
