[package]
name = "music-player-webui"
version = "0.1.8"
edition = "2021"
repository = "https://github.com/tsirysndr/music-player"
license = "MIT"
authors = ["Tsiry Sandratraina <tsiry.sndr@aol.com>"]
keywords = ["tokio", "music", "cli", "daemon", "streaming"]
description = "The web ui of music player"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.music-player-graphql]
path = "../graphql"
version = "0.1.5"

[dependencies.music-player-settings]
path = "../settings"
version = "0.1.2"

[dependencies.music-player-storage]
path = "../storage"
version = "0.1.3"

[dependencies.music-player-playback]
path = "../playback"
version = "0.1.9"

[dependencies.music-player-tracklist]
path = "../tracklist"
version = "0.1.6"

[dependencies.music-player-entity]
path = "../entity"
version = "0.1.6"

[dev-dependencies.music-player-scanner]
path = "../scanner"
version = "0.1.6"

[dependencies.music-player-discovery]
path = "../discovery"
version = "0.1.2"

[dependencies.music-player-types]
path = "../types"
version = "0.1.2"

[dependencies.music-player-addons]
path = "../addons"
version = "0.1.0"

[dev-dependencies]
futures-util = "0.3.25"
serde_json = "1.0.89"
surf = "2.3.2"
sea-orm = { version = "0.9.3", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }

[dependencies]
actix-web = "4.2.1"
async-graphql = "4.0.15"
async-graphql-actix-web = "4.0.15"
mime_guess = "2.0.4"
owo-colors = "3.5.0"
rust-embed = { version = "6.4.1", features = ["debug-embed", "actix"] }
actix-files = "0.6.2"
dirs = "4.0.0"
serde_derive = "1.0.145"
serde = { version = "1.0.145", features = ["serde_derive"] }
tokio = { version = "1.21.2", features = ["full"] }
actix-cors = "0.6.3"
sea-orm = { version = "0.9.3", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
futures-util = "0.3.25"
